--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-static": "^0.7.9",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-hammerjs": "^0.5.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
   },
