--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "css-loader": "^0.26.1",
     "node-static": "^0.7.9",
     "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.1",
     "react-hammerjs": "^0.5.0",
+    "react-motion": "^0.4.7",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
   },
