--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-hammerjs": "^0.5.0",
+    "reselect": "^2.5.4",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
   },
