--- a/lerna/packages/dx-core/package.json
+++ b/lerna/packages/dx-core/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@devexpress/devextreme-data-grid-core",
+  "name": "@devexpress/dx-core",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
@@ -11,20 +11,17 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@devexpress/devextreme-core": "^0.0.0"
-  },
   "devDependencies": {
-    "babel-jest": "^19.0.0",
-    "jest": "^19.0.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-runtime": "^6.20.0",
     "core-js": "^2.4.1",
-    "webpack": "^2.2.1"    
+    "jest": "^19.0.2",
+    "webpack": "^2.2.1"
   }
 }
