--- a/lerna/packages/dx-datagrid-core/package.json
+++ b/lerna/packages/dx-datagrid-core/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@devexpress/devextreme-core",
+  "name": "@devexpress/dx-data-grid-core",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/index",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
@@ -11,17 +11,20 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@devexpress/dx-core": "^0.0.0"
+  },
   "devDependencies": {
+    "babel-jest": "^19.0.0",
+    "jest": "^19.0.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
-    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-runtime": "^6.20.0",
     "core-js": "^2.4.1",
-    "jest": "^19.0.2",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1"    
   }
 }
