--- a/lerna/packages/dx-react-demos/package.json
+++ b/lerna/packages/dx-react-demos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@devexpress/devextreme-react-data-grig-bootstrap",
+  "name": "@devexpress/dx-react-demos",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,9 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@devexpress/dx-react-data-grid": "^0.0.0"
+  },
   "devDependencies": {
     "babel-jest": "^19.0.0",
     "jest": "^19.0.2"
