--- a/package.json
+++ b/package.json
@@ -1,34 +1,5 @@
 {
-  "name": "testing",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack",
-    "watch": "webpack-dev-server"
-  },
-  "dependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-runtime": "^6.20.0",
-    "core-js": "^2.4.1",
-    "css-loader": "^0.26.1",
-    "node-static": "^0.7.9",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-hammerjs": "^0.5.0",
-    "reselect": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.2.1"
-  },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "webpack-dev-server": "^2.3.0"
+    "lerna": "2.0.0-beta.38"
   }
 }
