--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "devDependencies": {
+    "concurrently": "^3.4.0",
     "lerna": "2.0.0-beta.38"
+  },
+  "scripts": {
+    "watch:core": "lerna run build:watch --scope @devexpress/dx-core --stream",
+    "watch:datagrid-core": "lerna run build:watch --scope @devexpress/dx-datagrid-core --stream",
+    "watch:react-demos": "lerna run watch --scope @devexpress/dx-react-demos --stream",
+    "watch": "concurrently --kill-others \"npm run watch:core\" \"npm run watch:datagrid-core\" \"npm run watch:react-demos\""
   }
 }
