--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch:core": "lerna run build:watch --scope @devexpress/dx-core --stream",
     "watch:datagrid-core": "lerna run build:watch --scope @devexpress/dx-datagrid-core --stream",
     "watch:react-core": "lerna run build:watch --scope @devexpress/dx-react-core --stream",
+    "watch:react-datagrid": "lerna run build:watch --scope @devexpress/dx-react-datagrid --stream",
     "watch:react-demos": "lerna run watch --scope @devexpress/dx-react-demos --stream",
-    "watch": "concurrently --kill-others \"npm run watch:core\" \"npm run watch:datagrid-core\" \"npm run watch:react-core\" \"npm run watch:react-demos\""
+    "watch": "concurrently --kill-others \"npm run watch:core\" \"npm run watch:datagrid-core\" \"npm run watch:react-core\" \"npm run watch:react-datagrid\" \"npm run watch:react-demos\""
   }
 }
