--- a/packages/dx-react-core/package.json
+++ b/packages/dx-react-core/package.json
@@ -12,17 +12,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-jest": "^19.0.0",
-    "jest": "^19.0.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-runtime": "^6.20.0",
     "core-js": "^2.4.1",
-    "webpack": "^2.2.1"    
+    "enzyme": "^2.7.1",
+    "jest": "^19.0.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "webpack": "^2.2.1"
   },
   "dependencies": {
     "@devexpress/dx-core": "^0.0.0",
