--- a/packages/dx-react-demos/package.json
+++ b/packages/dx-react-demos/package.json
@@ -12,16 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@devexpress/dx-react-datagrid": "^0.0.0",
-
+    "@devexpress/dx-react-datagrid-bootstrap3": "^0.0.0",
     "core-js": "^2.4.1",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.1",
     "reselect": "^2.5.4"
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
     "jest": "^19.0.2",
-    
     "css-loader": "^0.26.1",
     "node-static": "^0.7.9",
     "babel-cli": "^6.18.0",
