--- a/packages/dx-datagrid-core/package.json
+++ b/packages/dx-datagrid-core/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "webpack",
-    "build:watch": "webpack --watch"
+    "build:watch": "webpack --watch",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +18,6 @@
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
-    "jest": "^19.0.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
@@ -25,6 +26,11 @@
     "babel-preset-react": "^6.16.0",
     "babel-runtime": "^6.20.0",
     "core-js": "^2.4.1",
-    "webpack": "^2.2.1"    
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb-base": "^11.1.2",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jest": "^19.0.1",
+    "jest": "^19.0.2",
+    "webpack": "^2.2.1"
   }
 }
