--- a/packages/dx-react-datagrid-bootstrap3/package.json
+++ b/packages/dx-react-datagrid-bootstrap3/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "webpack",
-    "build:watch": "webpack --watch"
+    "build:watch": "webpack --watch",
+    "lint": "eslint src/**/*",
+    "lint:fix": "eslint --fix src/**/*"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +24,13 @@
     "babel-preset-react": "^6.16.0",
     "babel-runtime": "^6.20.0",
     "core-js": "^2.4.1",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-airbnb-base": "^11.1.2",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jest": "^19.0.1",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "jest": "^19.0.2",
     "webpack": "^2.2.1"
   },
