--- a/packages/dx-react-demos/package.json
+++ b/packages/dx-react-demos/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "webpack-dev-server",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "",
     "lint": "eslint src/**/*.{js,jsx}",
     "lint:fix": "eslint --fix src/**/*.{js,jsx}"
   },
